--- a/section 4/Bacon Fansite Start Here/css/style.css
+++ b/section 4/Bacon Fansite Start Here/css/style.css
@@ -1,3 +1,4 @@
+/*------------------------selectors-----------------------------*/
 h1 {
     color : red;
     font-size: 200px;
@@ -5,4 +6,14 @@ h1 {
 
 img {
     background-color: red;
+}
+
+/*-------------------------class---------------------------------*/
+
+.bro{
+    background-color: red;
+}
+
+.bacon{
+    background-color: blue;
 }
