--- a/section 5/css-my site/css/styles.css
+++ b/section 5/css-my site/css/styles.css
@@ -1,3 +1,11 @@
-body{
-    background-color: #153E90;
+div{
+    background-color: #FCECDD;
+}
+
+body {
+    margin: 0;
+}
+
+h1{
+    margin-top: 0;
 }
