--- a/section 5/css-my site/css/styles.css
+++ b/section 5/css-my site/css/styles.css
@@ -1,17 +1,26 @@
-.first{
-    background-color: #FCECDD;
-    position: relative;
-    padding-top: 20px;
-}
 
 body {
     text-align: center;
     margin: 0;
+    font-family: 'Merriweather Sans', sans-serif;
 }
 
 h1{
     width: 5%;
     margin: 0 auto 0 auto;
+    font-family: 'Sacramento', cursive;
+}
+h2{
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3{
+    font-family: 'Montserrat', sans-serif;
+}
+.first{
+    background-color: #FCECDD;
+    position: relative;
+    padding-top: 20px;
 }
 .second {
     background-color: red;
