--- a/section 5/css-my site/css/styles.css
+++ b/section 5/css-my site/css/styles.css
@@ -6,12 +6,14 @@ body {
 }
 
 h1{
-    width: 5%;
-    margin: 0 auto 0 auto;
+    width: 10%;
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
+    font-size: 5rem;
 }
 h2{
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
 }
 
 h3{
