--- a/section 5/css-my site/css/styles.css
+++ b/section 5/css-my site/css/styles.css
@@ -10,13 +10,16 @@ h1{
     margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
     font-size: 5rem;
+    color:  #66BFBF;
 }
 h2{
+    color:  #66BFBF;
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
 }
 
 h3{
+    color: #11999E;
     font-family: 'Montserrat', sans-serif;
 }
 .first{
@@ -45,4 +48,8 @@ span {
     position: absolute;
     left: 300px;
     bottom: 200px;
+}
+
+.footer-link{
+    color: #11999E;
 }
