--- a/section 5/css-my site/css/styles.css
+++ b/section 5/css-my site/css/styles.css
@@ -18,6 +18,10 @@ h2{
     font-size: 2.5rem;
 }
 
+.sub{
+    font-weight: normal;
+}
+
 h3{
     color: #11999E;
     font-family: 'Montserrat', sans-serif;
