--- a/section 5/css-my site/css/styles.css
+++ b/section 5/css-my site/css/styles.css
@@ -19,6 +19,7 @@ h2{
 }
 
 .sub{
+    line-height: 2;
     font-weight: normal;
 }
 
@@ -56,4 +57,17 @@ span {
 
 .footer-link{
     color: #11999E;
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+.skill-img{
+    margin-right: 30px;
+    width: 25%;
+    float: left;
 }
