--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -1,14 +1,57 @@
+/*selectoe*/
+body{
+    font-family: 'Montserrat';
+}
+
 h1{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat';
     font-size: 3rem;
     line-height: 1.5;
 }
 
+/*id*/
+
 #title{
     background-color: #ff4c68;
-    font-family: 'Ubuntu', sans-serif;
+    color: #fff;
 }
+
+/*class*/
 
 .container-fluid{
     padding: 3% 15%;
+}
+
+/*navigation bar*/
+
+.navbar{
+    padding: 0 0 4.5rem;
+}
+
+.navbar-brand{
+    font-family: 'Ubuntu';
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-family: 'Montserrat';
+}
+
+/* download button*/
+
+.download-button{
+    margin:  5% 3% 5% 0;
+}
+
+/* title image*/
+
+.title-image{
+    width: 60%;
+    transform: rotate(25deg);
 }
