--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -55,3 +55,45 @@ h1{
     width: 60%;
     transform: rotate(25deg);
 }
+
+
+/*features*/
+
+#features{
+    text-align: center;
+    padding: 7% 14%;
+    font-family: 'Montserrat';
+}
+
+/*features box*/
+
+.features-box{
+    width: 60%;
+    padding: 4.5rem;
+}
+
+/*features icon*/
+
+.ficon{
+    color: #ef8172;
+    font-size: 3.5rem;
+    padding: 5px;
+}
+
+.ficon:hover{
+    color: #ff4c68;
+}
+
+/*features heading*/
+
+.features-heading{
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+/*features paragraph*/
+
+.features-paragraph{
+    color: #8f8f8f;
+}
+
