--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -9,6 +9,21 @@ h1{
     line-height: 1.5;
 }
 
+h2{
+    font-family: 'Montserrat';
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+h3{
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+p{
+    color: #8f8f8f;
+}
 /*id*/
 
 #title{
@@ -84,16 +99,30 @@ h1{
     color: #ff4c68;
 }
 
-/*features heading*/
 
-.features-heading{
-    font-weight: bold;
-    font-size: 1.5rem;
+/*Testimonial*/
+
+#testimonials{
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
 }
 
-/*features paragraph*/
-
-.features-paragraph{
-    color: #8f8f8f;
+.testmonial-image{
+    border-radius: 100%;
+    margin: 20px;
 }
 
+/*press*/
+
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 50px;
+}
