--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -129,3 +129,15 @@ p{
     width: 15%;
     margin: 20px 20px 50px;
 }
+
+/*pricing section*/
+
+#pricing{
+    text-align: center;
+    padding: 100px;
+}
+
+.price-col{
+    padding: 3% 2%;
+
+}
