--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -34,7 +34,7 @@ p{
 /*class*/
 
 .container-fluid{
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 /*navigation bar*/
@@ -69,6 +69,8 @@ p{
 .title-image{
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
 }
 
 
@@ -78,6 +80,9 @@ p{
     text-align: center;
     padding: 7% 14%;
     font-family: 'Montserrat';
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
 }
 
 /*features box*/
