--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -17,8 +17,9 @@ h2{
 }
 
 h3{
+    font-family: 'Montserrat';
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 3rem;
 }
 
 p{
@@ -145,4 +146,40 @@ p{
 .price-col{
     padding: 3% 2%;
 
+}
+
+/*mobile view*/
+
+@media (max-width: 1028px) {
+    .title-image{
+        position: static;
+        transform: rotate(0);
+
+    }
+
+    #title{
+        text-align: center;
+}
+}
+
+#cta{
+    text-align: center;
+    background-color: #ff4c68;
+    padding: 7% 15%;
+    color: #fff;
+}
+
+.cta-content{
+    width: 70%;
+}
+
+#footer{
+    text-align: center;
+    background-color: #fff;
+    padding: 7% 15%;
+}
+
+.footer-icon{
+    font-size: 1.5rem;
+    margin: 15px 20px;
 }
