--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -26,17 +26,24 @@ p{
     line-height: 1.5;
 }
 
+/*background color*/
+
+.color-section{
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+.white-section{
+    background-color: #fff;
+}
+
 /*id*/
 
 #title .container-fluid{
     padding: 3% 15% 7%;
-}
-
-#title{
-    background-color: #ff4c68;
-    color: #fff;
     text-align: left;
 }
+
 
 /*class*/
 
@@ -119,7 +126,6 @@ p{
 
 #testimonials{
     background-color: #ef8172;
-    color: #fff;
 }
 
 .testmonial-image{
@@ -173,15 +179,6 @@ p{
     #title{
         text-align: center;
 }
-}
-
-#cta{
-    background-color: #ff4c68;
-    color: #fff;
-}
-
-#footer{
-    background-color: #fff;
 }
 
 .footer-icon{
