--- a/todolist/views/list.ejs
+++ b/todolist/views/list.ejs
@@ -7,6 +7,21 @@
     <title>to do list</title>
 </head>
 <body>
-    <h1>It's a <%= kindofday %></h1>
+    <h1><%= kindofday %></h1>
+
+    <ul>
+        <li>buy food</li>
+        <li>cook food</li>
+        <li>eat food</li>
+
+       <% for (var i=0; i<newItems.length; i++) { %>
+           <li><%= newItems[i] %></li>
+       <% } %>
+    </ul>
+
+<form action="/" method="post" class="">
+    <input type="text" name="newItem" >
+    <button type="submit" name="button">add</button>
+</form>
 </body>
 </html>
