--- a/EJS Challenge/EJS Challenge/ejs-challenge/views/compose.ejs
+++ b/EJS Challenge/EJS Challenge/ejs-challenge/views/compose.ejs
@@ -1,7 +1,12 @@
 <%- include("partials/header"); -%>
 <h1>Compose</h1>
 <form action="/compose" method="post">
-    <input type="text" name="posttitle" id="">
-    <button type="submit" name="button">Publish</button>
+    <div class="form-group">
+        <label for="posttitle">Title</label>
+        <input class="form-control" type="text" name="posttitle" id="">
+        <label for="postbody">Message</label>
+        <textarea class="form-control" name="postbody" id="" cols="30" rows="5"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary" name="button">Publish</button>
 </form>
 <%- include("partials/footer"); -%>
