--- a/EJS Challenge/EJS Challenge/ejs-challenge/views/compose.ejs
+++ b/EJS Challenge/EJS Challenge/ejs-challenge/views/compose.ejs
@@ -3,9 +3,9 @@
 <form action="/compose" method="post">
     <div class="form-group">
         <label for="posttitle">Title</label>
-        <input class="form-control" type="text" name="posttitle" id="">
+        <input class="form-control" type="text" name="postTitle" id="">
         <label for="postbody">Message</label>
-        <textarea class="form-control" name="postbody" id="" cols="30" rows="5"></textarea>
+        <textarea class="form-control" name="postBody" id="" cols="30" rows="5"></textarea>
     </div>
     <button type="submit" class="btn btn-primary" name="button">Publish</button>
 </form>
