--- a/EJS Challenge/EJS Challenge/ejs-challenge/views/home.ejs
+++ b/EJS Challenge/EJS Challenge/ejs-challenge/views/home.ejs
@@ -1,4 +1,7 @@
 <%- include("partials/header"); -%>
 <h1>Home</h1>
 <p><%= startingcontent %></p>
+<%post.forEach(function(post){ %>
+
+<%}) %>
 <%- include("partials/footer"); -%>
