--- a/EJS Challenge/EJS Challenge/ejs-challenge/views/home.ejs
+++ b/EJS Challenge/EJS Challenge/ejs-challenge/views/home.ejs
@@ -1,7 +1,8 @@
 <%- include("partials/header"); -%>
 <h1>Home</h1>
 <p><%= startingcontent %></p>
-<%post.forEach(function(post){ %>
-
-<%}) %>
+<% posts.forEach(function(post){ %>
+<h1><%= post.title %></h1>
+<p><%= post.content %></p>
+<% }) %>
 <%- include("partials/footer"); -%>
